--- a/.travis.yaml
+++ b/.travis.yaml
@@ -16,7 +16,7 @@ cache:
 env:
   - DOCKER_IMAGE=mete/rso-customers:0.06
   - DOCKER_USERNAME=2741
-  - DOCKER_PASSWORD=Basicto123
+  - DOCKER_PASSWORD=basicto
 
 script:
   - mvn clean package -U
