--- a/app/pom.xml
+++ b/app/pom.xml
@@ -25,6 +25,14 @@
             <groupId>si.fri.rso.samples</groupId>
             <artifactId>Kopj-services</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee</groupId>
+            <artifactId>kumuluzee-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee.cors</groupId>
+            <artifactId>kumuluzee-cors</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
