--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,11 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-        <kumuluzee.version>2.4.1</kumuluzee.version>
-        <kumuluzee-rest.version>1.1.0</kumuluzee-rest.version>
-        <kumuluzee-config.version>1.0.0</kumuluzee-config.version>
-        <postgresql.version>42.1.4</postgresql.version>
+        <kumuluzee-cors.version>1.0.6</kumuluzee-cors.version>
+        <kumuluzee.version>3.12.2</kumuluzee.version>
+        <kumuluzee-rest.version>1.5.1</kumuluzee-rest.version>
+        <kumuluzee-config.version>1.3.0</kumuluzee-config.version>
+        <postgresql.version>42.3.0</postgresql.version>
     </properties>
     <repositories>
         <repository>
@@ -44,6 +44,11 @@
 
     <dependencyManagement>
     <dependencies>
+        <dependency>
+            <groupId>com.kumuluz.ee.cors</groupId>
+            <artifactId>kumuluzee-cors</artifactId>
+            <version>${kumuluzee-cors.version}</version>
+        </dependency>
     <dependency>
         <groupId>com.kumuluz.ee</groupId>
         <artifactId>kumuluzee-bom</artifactId>
@@ -84,6 +89,19 @@
         </dependency>
     </dependencies>
     </dependencyManagement>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <fork>true</fork>
+                    <executable>C:\Program Files\Java\jdk1.8.0_202\bin\javac</executable>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
 
 </project>
