--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: customer
   rso-customers:
-    image: mete/rso-customers
+    image: 2741/rso-customers
     ports:
       - 8080:8080
     environment:
