--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,10 +9,11 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: customer
   rso-customers:
-    image: 2741/rso-customers
+    image: 2741/mojaprvaslika
     ports:
       - 8080:8080
     environment:
-      KUMULUZEE_DATASOURCES0_CONNECTIONURL: jdbc:postgresql://postgres:5432/customer
+      KUMULUZEE_DATASOURCES0_CONNECTIONURL: jdbc:postgresql://localhost:5432/customer
+
     depends_on:
       - postgres
