--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,14 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <kumuluzee-health.version>2.4.2</kumuluzee-health.version>
+        <kumuluzee-metrics.version>2.3.0</kumuluzee-metrics.version>
         <kumuluzee-cors.version>1.0.6</kumuluzee-cors.version>
         <kumuluzee.version>3.12.2</kumuluzee.version>
         <kumuluzee-rest.version>1.5.1</kumuluzee-rest.version>
         <kumuluzee-config.version>1.3.0</kumuluzee-config.version>
-        <postgresql.version>42.3.0</postgresql.version>
+
+        <postgresql.version>42.3.1</postgresql.version>
     </properties>
     <repositories>
         <repository>
@@ -56,21 +59,32 @@
         <type>pom</type>
         <scope>import</scope>
     </dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee.health</groupId>
+            <artifactId>kumuluzee-health</artifactId>
+            <version>${kumuluzee-health.version}</version>
+        </dependency>
 
+        <dependency>
+            <groupId>com.kumuluz.ee.metrics</groupId>
+            <artifactId>kumuluzee-metrics-core</artifactId>
+            <version>${kumuluzee-metrics.version}</version>
+        </dependency>
     <dependency>
         <groupId>com.kumuluz.ee.rest</groupId>
         <artifactId>kumuluzee-rest-core</artifactId>
         <version>${kumuluzee-rest.version}</version>
     </dependency>
-    <dependency>
-        <groupId>com.kumuluz.ee.config</groupId>
-        <artifactId>kumuluzee-config-etcd</artifactId>
-        <version>${kumuluzee-config.version}</version>
-    </dependency>
+        <dependency>
+            <artifactId>kumuluzee-config-consul</artifactId>
+            <groupId>com.kumuluz.ee.config</groupId>
+            <version>${kumuluzee-config.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>${postgresql.version}</version>
+
         </dependency>
         <dependency>
             <groupId>si.fri.rso.samples</groupId>
