--- a/services/pom.xml
+++ b/services/pom.xml
@@ -20,7 +20,14 @@
         <groupId>com.kumuluz.ee</groupId>
         <artifactId>kumuluzee-jax-rs-jersey</artifactId>
     </dependency>
-
+        <dependency>
+            <groupId>com.kumuluz.ee</groupId>
+            <artifactId>kumuluzee-cdi-weld</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee</groupId>
+            <artifactId>kumuluzee-jax-rs-jersey</artifactId>
+        </dependency>
     <dependency>
         <groupId>com.kumuluz.ee.rest</groupId>
         <artifactId>kumuluzee-rest-core</artifactId>
