--- a/services/pom.xml
+++ b/services/pom.xml
@@ -16,7 +16,12 @@
         <groupId>com.kumuluz.ee</groupId>
         <artifactId>kumuluzee-cdi-weld</artifactId>
     </dependency>
-    <dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee.metrics</groupId>
+            <artifactId>kumuluzee-metrics-core</artifactId>
+        </dependency>
+
+        <dependency>
         <groupId>com.kumuluz.ee</groupId>
         <artifactId>kumuluzee-jax-rs-jersey</artifactId>
     </dependency>
