--- a/app/pom.xml
+++ b/app/pom.xml
@@ -36,6 +36,11 @@
             <groupId>com.kumuluz.ee.health</groupId>
             <artifactId>kumuluzee-health</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee.config</groupId>
+            <artifactId>kumuluzee-config-mp</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
