--- a/app/src/main/resources/config.yaml
+++ b/app/src/main/resources/config.yaml
@@ -20,10 +20,8 @@ kumuluzee:
   metrics:
     web-instrumentation:
       - name: cutomers-health
-        url-pattern: /v1/customers/*
-    servlet:
-      enabled: true
-      mapping: /my-metrics-servlet
+        url-pattern: /metrics
+
   cors-filter:
     servlet:
       allow-origin: "*"
