--- a/kubernetes/customer-deployment.yaml
+++ b/kubernetes/customer-deployment.yaml
@@ -47,7 +47,7 @@ kind: Service
 metadata:
   name: costumer
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - port: 8080
       protocol: TCP
