--- a/kubernetes/customer-deployment.yaml
+++ b/kubernetes/customer-deployment.yaml
@@ -21,7 +21,10 @@ spec:
             - name: KUMULUZEE_DATASOURCES0_USERNAME
               value: dyotbadl
             - name: KUMULUZEE_DATASOURCES0_PASSWORD
-              value: PvKlJHRdGpGvvFc2wUFw_zA6F3FXhilN
+              valueFrom:
+                secretKeyRef:
+                  name: hola
+                  key: API_TOKENII
           ports:
             - containerPort: 8080
               name: server
