--- a/app/src/main/resources/config.yaml
+++ b/app/src/main/resources/config.yaml
@@ -27,6 +27,6 @@ kumuluzee:
       allow-origin: "*"
 rest-properties:
   external-services:
-    order-service:
+    service:
       enabled: true
   broken: false
