--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,8 @@
         <kumuluzee.version>3.12.2</kumuluzee.version>
         <kumuluzee-rest.version>1.5.1</kumuluzee-rest.version>
         <kumuluzee-config.version>1.3.0</kumuluzee-config.version>
+        <kumuluzee-fault-tolerance.version>2.1.1</kumuluzee-fault-tolerance.version>
+        <kumuluzee-discovery.version>1.1.1</kumuluzee-discovery.version>
 
         <postgresql.version>42.3.1</postgresql.version>
     </properties>
@@ -107,6 +109,17 @@
             <groupId>com.kumuluz.ee.config</groupId>
             <artifactId>kumuluzee-config-mp</artifactId>
             <version>${kumuluzee-config-mp.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee.fault.tolerance</groupId>
+            <artifactId>kumuluzee-fault-tolerance-smallrye</artifactId>
+            <version>${kumuluzee-fault-tolerance.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.kumuluz.ee.discovery</groupId>
+            <artifactId>kumuluzee-discovery-consul</artifactId>
+            <version>${kumuluzee-discovery.version}</version>
         </dependency>
         <dependency>
             <groupId>si.fri.rso.samples</groupId>
