--- a/app/src/main/resources/config.yaml
+++ b/app/src/main/resources/config.yaml
@@ -21,6 +21,9 @@ kumuluzee:
     web-instrumentation:
       - name: metriki
         url-pattern: /metrics
+  discovery:
+    consul:
+      agent: http://20.81.14.144:8500
 
   cors-filter:
     servlet:
