--- a/services/pom.xml
+++ b/services/pom.xml
@@ -24,10 +24,10 @@
     </build>
 
     <dependencies>
-    <dependency>
-        <groupId>com.kumuluz.ee</groupId>
-        <artifactId>kumuluzee-cdi-weld</artifactId>
-    </dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee</groupId>
+            <artifactId>kumuluzee-cdi-weld</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.kumuluz.ee.metrics</groupId>
             <artifactId>kumuluzee-metrics-core</artifactId>
@@ -36,16 +36,14 @@
             <groupId>com.kumuluz.ee.fault.tolerance</groupId>
             <artifactId>kumuluzee-fault-tolerance-smallrye</artifactId>
         </dependency>
-
         <dependency>
             <groupId>com.kumuluz.ee.discovery</groupId>
             <artifactId>kumuluzee-discovery-consul</artifactId>
         </dependency>
-
         <dependency>
-        <groupId>com.kumuluz.ee</groupId>
-        <artifactId>kumuluzee-jax-rs-jersey</artifactId>
-    </dependency>
+            <groupId>com.kumuluz.ee</groupId>
+            <artifactId>kumuluzee-jax-rs-jersey</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.kumuluz.ee</groupId>
             <artifactId>kumuluzee-cdi-weld</artifactId>
@@ -54,10 +52,14 @@
             <groupId>com.kumuluz.ee</groupId>
             <artifactId>kumuluzee-jax-rs-jersey</artifactId>
         </dependency>
-    <dependency>
-        <groupId>com.kumuluz.ee.rest</groupId>
-        <artifactId>kumuluzee-rest-core</artifactId>
-    </dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee.rest</groupId>
+            <artifactId>kumuluzee-rest-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee.logs</groupId>
+            <artifactId>kumuluzee-logs-log4j2</artifactId>
+        </dependency>
         <dependency>
             <groupId>si.fri.rso.samples</groupId>
             <artifactId>Kopj-models</artifactId>
