--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,11 @@
             <artifactId>kumuluzee-health</artifactId>
             <version>${kumuluzee-health.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.kumuluz.ee.logs</groupId>
+            <artifactId>kumuluzee-logs-log4j2</artifactId>
+            <version>1.3.0</version>
+        </dependency>
         <dependency>
             <groupId>com.kumuluz.ee.metrics</groupId>
             <artifactId>kumuluzee-metrics-core</artifactId>
@@ -94,7 +98,6 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>${postgresql.version}</version>
-
         </dependency>
         <dependency>
             <groupId>si.fri.rso.samples</groupId>
